test/functions/default-arguments/default-argument-ref.chpl
proc foo(ref x = 7) { x = 17; writeln(x); }
foo();
